# dojoflow

./: README.md  pyproject.toml
app/config/: settings.py  urls.py
app/dojoflow/: admin.py  api_views.py  apps.py  models.py  serializers.py  urls.py
app/dojoflow/migrations/: 0001_initial.py  0002_alter_clubadmin_user_alter_clubadmin_unique_together.py  0003_remove_attestation_notes.py  0004_remove_attestation_level.py  0005_restructure_attestations.py  0006_remove_last_attestation_date_field.py  0007_remove_student_current_level_studentattestation.py
app/dojoflow/services/: __init__.py  attestation_service.py  club_service.py  student_service.py
app/dojoflow/utils/: __init__.py  date_utils.py  exceptions.py  mixins.py  validators.py
databases/: docker-compose.yml  init.sql
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: AttestationLevelSelect.vue  ConfirmModal.vue  StudentDeleteModal.vue
frontend/src/composables/: index.ts  useApi.ts  useAttestations.ts  useClubs.ts  useCurrentClub.ts  useModal.ts  useNotifications.ts  usePagination.ts  useSearch.ts  useStudents.ts  useStudentsV2.ts
frontend/src/constants/: api.ts  index.ts  routes.ts  ui.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: auth.ts  students.ts
frontend/src/types/: api.ts  attestation.ts  club.ts  index.ts  student.ts  user.ts
frontend/src/utils/: api.ts  date.ts  debug.ts  format.ts  index.ts  storage.ts  validation.ts
(+46 files in other folders)
